# durak

./: .gitignore  Justfile  README.md  flake.nix  package-lock.json
app/: .dir-locals.el  .gitignore  deps.edn  package-lock.json  package.json  postcss.config.js  shadow-cljs.edn  tailwind.config.js
app/resources/public/: index.html
app/src/durak/: constants.cljs  main.cljs  main.css  routes.cljs  types.cljs  utils.cljs
app/src/durak/components/: card.cljs
app/src/durak/controls/: boot.cljs  client.cljs  game.cljs  helper.cljs  router.cljs  ux.cljs  wallet.cljs
app/src/durak/pages/: game.cljs  lobby.cljs
conf/: 3players.json  heads_up.json  pro_3players.json  prod_heads_up.json  solana-metadata.json
core/: Cargo.toml
core/src/: error.rs  lib.rs  misc.rs
